--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 <body>
   <h1 style="text-align: center">Arrange Images by Drag and Drop</h1>
   <div class="flex" id="parent">
-    <div id="div1" draggable="true" class="image"></div>
-    <div id="div2" draggable="true" class="image"></div>
-    <div id="div3" draggable="true" class="image"></div>
-    <div id="div4" draggable="true" class="image"></div>
-    <div id="div5" draggable="true" class="image"></div>
-    <div id="div6" draggable="true" class="image"></div>
+    <div id="div1" draggable="true" class="image">Image1</div>
+    <div id="div2" draggable="true" class="image">Image2</div>
+    <div id="div3" draggable="true" class="image">Image3</div>
+    <div id="div4" draggable="true" class="image">Image4</div>
+    <div id="div5" draggable="true" class="image">Image5</div>
+    <div id="div6" draggable="true" class="image">Image6</div>
   </div>
 </body>
 </html>
